# Program_utilities

./: .gitignore  CMakeLists.txt  README.md
src/: CDHIT.cpp  CDHIT.h  CMakeLists.txt  Muscle.cpp  Muscle.h  Parser.cpp  Parser.h  Program.cpp  Program.h  cdhitParser.cpp  cdhitParser.h
test/: CMakeLists.txt
test/src/: test_CDHIT.cpp  test_Muscle.cpp  test_cdhitParser.cpp
test/test_answer/: answer_muscle.fasta
test/test_data/: test.cdhit.clstr  test_muscle.fasta
test/test_output/: README.txt
tests/: CMakeLists.txt
tests/src/: test_CDHIT.cpp
tests/test_answer/: answer_CDHIT.cdhit.clstr
