CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(PROGRAM_UTILITIES)

SET(CMAKE_CXX_STANDARD 11)

#setting build mode
IF ("${build}" MATCHES "debug")
	SET(CMAKE_BUILD_TYPE "debug")
ELSE ("${build}" MATCHES "debug")
	SET(CMAKE_BUILD_TYPE "release")
ENDIF ("${build}" MATCHES "debug")

#setting build bit information
IF ("${bit}" MATCHES "32")
	ADD_DEFINITIONS(-DCALIB_CFG_COMPILE_BIT=32 -m32)
	SET(CMAKE_EXE_LINKER_FLAGS -m32)
ELSE ("${bit}" MATCHES "32")
	ADD_DEFINITIONS(-DCALIB_CFG_COMPILE_BIT=64 -m64)
	SET(CMAKE_EXE_LINKER_FLAGS -m64)
ENDIF ("${bit}" MATCHES "32")

IF ("${build}" MATCHES "debug")
	MESSAGE("PROJECT_SOURCE_DIR=" ${PROJECT_SOURCE_DIR})
	MESSAGE("PROJECT_BINARY_DIR=" ${PROJECT_BINARY_DIR})
ENDIF ("${build}" MATCHES "debug")

ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)