ENABLE_TESTING()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/src)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/tests/bin)
IF ("${build}" MATCHES "debug")
	MESSAGE("EXECUTABLE_OUTPUT_PATH=" ${EXECUTABLE_OUTPUT_PATH})
ENDIF ("${build}" MATCHES "debug")

SET(TEST_SOURCE_DIR ${PROJECT_SOURCE_DIR}/tests/src)

ADD_EXECUTABLE(test_CDHIT ${TEST_SOURCE_DIR}/test_CDHIT.cpp)
ADD_EXECUTABLE(test_cdhitParser ${TEST_SOURCE_DIR}/test_cdhitParser.cpp)

TARGET_LINK_LIBRARIES(test_CDHIT CDHIT)
TARGET_LINK_LIBRARIES(test_cdhitParser cdhitParser)

ADD_TEST(test_CDHIT ${EXECUTABLE_OUTPUT_PATH}/test_CDHIT)
ADD_TEST(test_cdhitParser ${EXECUTABLE_OUTPUT_PATH}/test_cdhitParser)